--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="1228_2051.cpp">
       <Filter>Basic</Filter>
     </ClCompile>
+    <ClCompile Include="1229_1810.cpp">
+      <Filter>Basic</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
