--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="1229_1810.cpp">
       <Filter>Basic</Filter>
     </ClCompile>
+    <ClCompile Include="1230_1403.cpp">
+      <Filter>Basic</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
