--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="1231_2046.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="26_0101_1405.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
