--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="1231_2046.cpp">
       <Filter>2025</Filter>
     </ClCompile>
+    <ClCompile Include="26_0101_1405.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
