--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -54,5 +54,8 @@
     <ClCompile Include="26_0102_1700.cpp">
       <Filter>2026</Filter>
     </ClCompile>
+    <ClCompile Include="26_0103_1531.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
