--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="26_0104_Circle.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="26_0105_2215.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
