--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="26_0105_2215.cpp">
       <Filter>2026</Filter>
     </ClCompile>
+    <ClCompile Include="26_0106_2249.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
