--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -175,7 +175,10 @@
     <ClCompile Include="26_0104_Circle.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="26_0105_2215.cpp" />
+    <ClCompile Include="26_0105_2215.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="26_0106_2249.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
