--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -181,7 +181,10 @@
     <ClCompile Include="26_0106_2249.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="26_0107_2217.cpp" />
+    <ClCompile Include="26_0107_2217.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="26_0108_2242.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
