--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="26_0107_2217.cpp">
       <Filter>2026</Filter>
     </ClCompile>
+    <ClCompile Include="26_0108_2242.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
