--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -84,12 +84,42 @@
     <ClCompile Include="26_0109_2111.cpp">
       <Filter>2026</Filter>
     </ClCompile>
+    <ClCompile Include="26_0110_1511.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
+    <ClCompile Include="26_0110_cal.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
+    <ClCompile Include="26_0110_cal_main.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
+    <ClCompile Include="26_0110_Box.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
+    <ClCompile Include="26_0110_Box_main.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
+    <ClCompile Include="26_0110_Ram.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
+    <ClCompile Include="26_0110_Ram_main.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
       <Filter>2026</Filter>
     </ClInclude>
     <ClInclude Include="26_0104_Exp.h">
+      <Filter>2026</Filter>
+    </ClInclude>
+    <ClInclude Include="26_0110_cal.h">
+      <Filter>2026</Filter>
+    </ClInclude>
+    <ClInclude Include="26_0110_Box.h">
+      <Filter>2026</Filter>
+    </ClInclude>
+    <ClInclude Include="26_0110_Ram.h">
       <Filter>2026</Filter>
     </ClInclude>
   </ItemGroup>
