--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="26_0110_Ram_main.cpp">
       <Filter>2026</Filter>
     </ClCompile>
+    <ClCompile Include="26_0111_1809.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
