--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClCompile Include="26_0114_1336.cpp">
       <Filter>2026</Filter>
     </ClCompile>
+    <ClCompile Include="26_0115_2222.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
