--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -220,6 +220,7 @@
     <ClCompile Include="26_0115_2222.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="26_0116_1450.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
