--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="26_0118_1335.cpp">
       <Filter>2026</Filter>
     </ClCompile>
+    <ClCompile Include="26_0119_1324.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
