--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -226,7 +226,10 @@
     <ClCompile Include="26_0118_1335.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="26_0119_1324.cpp" />
+    <ClCompile Include="26_0119_1324.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="26_0120_1542.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
