--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClCompile Include="26_0120_1542.cpp">
       <Filter>2026</Filter>
     </ClCompile>
+    <ClCompile Include="26_0121_1408.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
