--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -232,7 +232,10 @@
     <ClCompile Include="26_0120_1542.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="26_0121_1408.cpp" />
+    <ClCompile Include="26_0121_1408.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="26_0122_1850.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
