--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -132,6 +132,12 @@
     <ClCompile Include="26_0122_1850.cpp">
       <Filter>2026</Filter>
     </ClCompile>
+    <ClCompile Include="26_0123_1820.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
+    <ClCompile Include="26_0124_1719.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
