--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -244,7 +244,10 @@
     <ClCompile Include="26_0124_1719.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="26_0125_1644.cpp" />
+    <ClCompile Include="26_0125_1644.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="26_0127_1938.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
