--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -250,7 +250,10 @@
     <ClCompile Include="26_0127_1938.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="26_0130_1619.cpp" />
+    <ClCompile Include="26_0130_1619.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="26_0131_1642.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
