--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClCompile Include="26_0130_1619.cpp">
       <Filter>2026</Filter>
     </ClCompile>
+    <ClCompile Include="26_0131_1642.cpp">
+      <Filter>2026</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
