--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -16,8 +16,11 @@
     <Filter Include="2025">
       <UniqueIdentifier>{a8553c74-fdf3-48cb-af97-11de3c923632}</UniqueIdentifier>
     </Filter>
-    <Filter Include="2026">
+    <Filter Include="2026_01">
       <UniqueIdentifier>{a8572e8f-1d80-4cfa-83e8-5aa777297c65}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="2026_02">
+      <UniqueIdentifier>{251fe536-364a-4440-9c3d-26a88a4f9bd2}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -49,123 +52,126 @@
       <Filter>2025</Filter>
     </ClCompile>
     <ClCompile Include="26_0101_1405.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0102_1700.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0103_1531.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0104_Circle.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0104_main.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0104_Exp.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0104_exp_main.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0105_2215.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0106_2249.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0107_2217.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0108_2242.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0109_2111.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0110_1511.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0110_cal.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0110_cal_main.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0110_Box.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0110_Box_main.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0110_Ram.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0110_Ram_main.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0111_1809.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0114_1336.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0115_2222.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0116_1450.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0118_1335.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0119_1324.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0120_1542.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0121_1408.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0122_1850.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0123_1820.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0124_1719.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0125_1644.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0127_1938.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0130_1619.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClCompile>
     <ClCompile Include="26_0131_1642.cpp">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
+    </ClCompile>
+    <ClCompile Include="26_0201_1520.cpp">
+      <Filter>2026_02</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClInclude>
     <ClInclude Include="26_0104_Exp.h">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClInclude>
     <ClInclude Include="26_0110_cal.h">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClInclude>
     <ClInclude Include="26_0110_Box.h">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClInclude>
     <ClInclude Include="26_0110_Ram.h">
-      <Filter>2026</Filter>
+      <Filter>2026_01</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
