--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClCompile Include="26_0201_1520.cpp">
       <Filter>2026_02</Filter>
     </ClCompile>
+    <ClCompile Include="26_0202_1633.cpp">
+      <Filter>2026_02</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
