--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -260,7 +260,10 @@
     <ClCompile Include="26_0201_1520.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="26_0202_1633.cpp" />
+    <ClCompile Include="26_0202_1633.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="26_0203_1522.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
