--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -272,7 +272,10 @@
     <ClCompile Include="26_0205_1455.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="26_0206_1359.cpp" />
+    <ClCompile Include="26_0206_1359.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="26_0207_1926.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
