--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -281,6 +281,7 @@
     <ClCompile Include="26_0209_2124.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="26_0210_1628.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
