2026_0212_operator overloading prbl

--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -281,7 +281,10 @@
     <ClCompile Include="26_0209_2124.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="26_0210_1628.cpp" />
+    <ClCompile Include="26_0210_1628.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="26_0212_1938.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
