--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -183,6 +183,12 @@
     <ClCompile Include="26_0212_1938.cpp">
       <Filter>2026_02</Filter>
     </ClCompile>
+    <ClCompile Include="26_0213_1619.cpp">
+      <Filter>2026_02</Filter>
+    </ClCompile>
+    <ClCompile Include="26_0214_1427.cpp">
+      <Filter>2026_02</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
