--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -293,7 +293,10 @@
     <ClCompile Include="26_0214_1427.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="26_0215_1705.cpp" />
+    <ClCompile Include="26_0215_1705.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="26_0220_1508.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
