--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -302,6 +302,7 @@
     <ClCompile Include="26_0222_1414.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="26_0223_1024.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
