--- a/C++_STUDY.vcxproj.filters
+++ b/C++_STUDY.vcxproj.filters
@@ -201,6 +201,9 @@
     <ClCompile Include="26_0223_1024.cpp">
       <Filter>2026_02</Filter>
     </ClCompile>
+    <ClCompile Include="26_0224_0905.cpp">
+      <Filter>2026_02</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
