--- a/C++_STUDY.vcxproj
+++ b/C++_STUDY.vcxproj
@@ -302,7 +302,10 @@
     <ClCompile Include="26_0222_1414.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="26_0223_1024.cpp" />
+    <ClCompile Include="26_0223_1024.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="26_0224_0905.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="26_0104_Circle.h">
